--- a/tabela.html
+++ b/tabela.html
@@ -126,6 +126,10 @@
                     <span class="info-content">Dor abdominal, náuseas, vômitos, diarreia. Infestações grandes podem causar obstrução intestinal.</span>
                 </div>
                 <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para visualização de ovos. O método de Lutz (Hoffmann, Pons e Janer) ou o método de Faust et al. são comumente utilizados.</span>
+                </div>
+                <div class="info-item">
                     <span class="info-label">Tratamento:</span>
                     <span class="info-content">Albendazol ou Mebendazol.</span>
                 </div>
@@ -170,6 +174,10 @@
                 <div class="info-item">
                     <span class="info-label">Sintomas:</span>
                     <span class="info-content">Prurido anal, irritabilidade, insônia.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Teste da fita adesiva (anal), que consiste em coletar os ovos da região perianal pela noite, antes da higiene. Exame de fezes não é recomendado.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -218,6 +226,10 @@
                     <span class="info-content">Dor abdominal, diarreia sanguinolenta (disenteria) e prolapso retal em casos graves.</span>
                 </div>
                 <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para visualização de ovos característicos em forma de limão. O método de Kato-Katz é o mais utilizado para quantificação.</span>
+                </div>
+                <div class="info-item">
                     <span class="info-label">Tratamento:</span>
                     <span class="info-content">Albendazol ou Mebendazol.</span>
                 </div>
@@ -262,6 +274,10 @@
                 <div class="info-item">
                     <span class="info-label">Sintomas:</span>
                     <span class="info-content">Anemia, fraqueza, dor abdominal. Pode causar "bicho geográfico" na pele.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. Métodos quantitativos como o de Kato-Katz são úteis para avaliar a carga parasitária.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -310,6 +326,10 @@
                     <span class="info-content">Dor abdominal, urticária, síndrome de larva migrans. Em imunossuprimidos, pode ser fatal.</span>
                 </div>
                 <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Ovos raramente são encontrados nas fezes. Os métodos mais eficazes são a pesquisa de larvas em fezes, como o método de Baermann-Moraes e a cultura em carvão ativado[cite: 3]. Endoscopia com biópsia duodenal também pode ser usada.</span>
+                </div>
+                <div class="info-item">
                     <span class="info-label">Tratamento:</span>
                     <span class="info-content">Ivermectina.</span>
                 </div>
@@ -354,6 +374,10 @@
                 <div class="info-item">
                     <span class="info-label">Sintomas:</span>
                     <span class="info-content">Febre, linfadenite e, em casos crônicos, linfedema (elefantíase).</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Pesquisa de microfilárias no sangue[cite: 3]. A coleta deve ser feita preferencialmente à noite, entre 22h e 2h, quando as microfilárias estão em maior concentração no sangue periférico. Testes sorológicos também podem ser utilizados.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -402,6 +426,10 @@
                     <span class="info-content">Fase aguda: dermatite, febre. Fase crônica: fibrose no fígado e baço (esquistossomose hepatoesplênica).</span>
                 </div>
                 <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. O método de Kato-Katz é o mais indicado para diagnóstico e quantificação. Imunodiagnóstico (como ELISA) e exames de imagem (ultrassom do fígado e baço) são usados para avaliar a fase crônica da doença.</span>
+                </div>
+                <div class="info-item">
                     <span class="info-label">Tratamento:</span>
                     <span class="info-content">Praziquantel.</span>
                 </div>
@@ -411,7 +439,7 @@
                 </div>
             </div>
         </div>
-       
+  
         <div class="card">
             <div class="card-header" onclick="toggleCard(this)">Teníase</div>
             <div class="card-body">
@@ -446,6 +474,10 @@
                 <div class="info-item">
                     <span class="info-label">Sintomas:</span>
                     <span class="info-content">Dor abdominal, náuseas, perda de peso, eliminação de proglotes nas fezes.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes[cite: 4]. Ovos de T. solium e T. saginata são indistinguíveis.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -492,6 +524,10 @@
                 <div class="info-item">
                     <span class="info-label">Sintomas:</span>
                     <span class="info-content">Depende do local onde a larva se aloja. Neurocisticercose (no cérebro) causa convulsões e dores de cabeça; cisticercose ocular causa perda de visão.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exames de imagem, como tomografia e ressonância magnética, são cruciais para localizar cistos no cérebro[cite: 4]. Testes sorológicos como o ELISA e o Western blot também são utilizados para detectar a presença de anticorpos.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
