--- a/tabela.html
+++ b/tabela.html
@@ -91,6 +91,36 @@
     <div class="container">
 
         <div class="card">
+            <div class="card-header" onclick="toggleCard(this)">Mecanismos de Ação(Farmacos)</div>
+            <div class="card-body">
+                <div class="info-item">
+                    <span class="info-label">Albendazol/Mebendazol:</span>
+                    <span class="info-content">Inibem a polimerização da tubulina nos parasitas, interrompendo a captação de glicose e esgotando suas reservas de energia.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Ivermectina:</span>
+                    <span class="info-content">Age nos canais de cloro ligados ao glutamato nas células nervosas e musculares dos parasitas, causando hiperpolarização, paralisia e morte.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Dietilcarbamazina (DEC):</span>
+                    <span class="info-content">Sensibiliza as microfilárias a um ataque do sistema imunológico do hospedeiro, facilitando a sua destruição.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Praziquantel:</span>
+                    <span class="info-content">Aumenta a permeabilidade da membrana celular do parasita ao cálcio, resultando em contração muscular e paralisia.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Niclosamida:</span>
+                    <span class="info-content">Inibe a fosforilação oxidativa na mitocôndria dos parasitas, resultando em uma deficiência de ATP e morte do verme.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Triclabendazol:</span>
+                    <span class="info-content">Atua no metabolismo energético da Fasciola hepatica, ligando-se a proteínas da tubulina do parasita.</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
             <div class="card-header" onclick="toggleCard(this)">Ascaridíase</div>
             <div class="card-body">
                 <div class="info-item">
@@ -131,7 +161,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Albendazol ou Mebendazol.</span>
+                    <span class="info-content">Albendazol ou Mebendazol. Não usar Piperazina em caso de migração pulmonar.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -181,7 +211,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Albendazol, Mebendazol para o paciente e contatos.</span>
+                    <span class="info-content">Albendazol, Mebendazol para o paciente e contatos. Não usar Praziquantel, pois é ineficaz para enterobíase.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -231,7 +261,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Albendazol ou Mebendazol.</span>
+                    <span class="info-content">Albendazol ou Mebendazol. Não usar Praziquantel.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -277,11 +307,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. Métodos quantitativos como o de Kato-Katz são úteis para avaliar a carga parasitária.</span>
+                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. Métodos quantitativos como o de Kato-Katz são úteis para avaliar a carga parasitária.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Albendazol ou Mebendazol.</span>
+                    <span class="info-content">Albendazol ou Mebendazol. Não usar Piperazina.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -327,11 +357,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Ovos raramente são encontrados nas fezes. Os métodos mais eficazes são a pesquisa de larvas em fezes, como o método de Baermann-Moraes e a cultura em carvão ativado[cite: 3]. Endoscopia com biópsia duodenal também pode ser usada.</span>
+                    <span class="info-content">Ovos raramente são encontrados nas fezes. [cite_start]Os métodos mais eficazes são a pesquisa de larvas em fezes, como o método de Baermann-Moraes e a cultura em carvão ativado[cite: 3]. Endoscopia com biópsia duodenal também pode ser usada.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Ivermectina.</span>
+                    <span class="info-content">Ivermectina. Não usar Albendazol ou Mebendazol como primeira escolha, pois são menos eficazes.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -377,11 +407,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Pesquisa de microfilárias no sangue[cite: 3]. A coleta deve ser feita preferencialmente à noite, entre 22h e 2h, quando as microfilárias estão em maior concentração no sangue periférico. Testes sorológicos também podem ser utilizados.</span>
+                    [cite_start]<span class="info-content">Pesquisa de microfilárias no sangue[cite: 3]. A coleta deve ser feita preferencialmente à noite, entre 22h e 2h, quando as microfilárias estão em maior concentração no sangue periférico. Testes sorológicos também podem ser utilizados.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Dietilcarbamazina (DEC) ou Ivermectina.</span>
+                    <span class="info-content">Dietilcarbamazina (DEC) ou Ivermectina. Não usar Albendazol ou Mebendazol como tratamento único.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -427,11 +457,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. O método de Kato-Katz é o mais indicado para diagnóstico e quantificação. Imunodiagnóstico (como ELISA) e exames de imagem (ultrassom do fígado e baço) são usados para avaliar a fase crônica da doença.</span>
+                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. O método de Kato-Katz é o mais indicado para diagnóstico e quantificação. Imunodiagnóstico (como ELISA) e exames de imagem (ultrassom do fígado e baço) são usados para avaliar a fase crônica da doença.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Praziquantel.</span>
+                    <span class="info-content">Praziquantel. Não usar Mebendazol.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -439,7 +469,57 @@
                 </div>
             </div>
         </div>
-  
+        
+        <div class="card">
+            <div class="card-header" onclick="toggleCard(this)">Fasciolose</div>
+            <div class="card-body">
+                <div class="info-item">
+                    <span class="info-label">Agente Etiológico:</span>
+                    <span class="info-content">Fasciola hepatica.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Classificação:</span>
+                    <span class="info-content">Helminto (Platyhelminthes, classe Trematoda)</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Morfologia:</span>
+                    <span class="info-content">Verme foliáceo (em forma de folha).</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Habitat:</span>
+                    <span class="info-content">Fígado e ductos biliares.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Ciclo Biológico:</span>
+                    <span class="info-content">Heteroxênico. Transmissão pela ingestão de vegetais aquáticos contaminados com larvas (metacercárias). Os ovos liberados nas fezes infectam moluscos, que liberam cercárias que se encistam nos vegetais.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Epidemiologia:</span>
+                    <span class="info-content">Acomete principalmente animais como bovinos e ovinos, mas pode infectar humanos acidentalmente.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Transmissão:</span>
+                    <span class="info-content">Ingestão de vegetais aquáticos (como agrião) contaminados.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Sintomas:</span>
+                    <span class="info-content">Dor abdominal, febre, hepatomegalia, eosinofilia.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Diagnóstico:</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos. Sorologia (ELISA) e exames de imagem (ultrassom) também podem ser usados.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Tratamento:</span>
+                    <span class="info-content">Triclabendazol. O Praziquantel, usado em outras parasitoses, é ineficaz contra a Fasciola hepatica.</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Profilaxia:</span>
+                    <span class="info-content">Evitar consumo de vegetais aquáticos crus de locais desconhecidos, e controle em animais de fazenda.</span>
+                </div>
+            </div>
+        </div>
+
         <div class="card">
             <div class="card-header" onclick="toggleCard(this)">Teníase</div>
             <div class="card-body">
@@ -477,11 +557,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes[cite: 4]. Ovos de T. solium e T. saginata são indistinguíveis.</span>
+                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes[cite: 4]. Ovos de T. solium e T. saginata são indistinguíveis.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Praziquantel ou Niclosamida.</span>
+                    <span class="info-content">Praziquantel ou Niclosamida. Não usar Albendazol ou Mebendazol, pois podem agravar uma possível neurocisticercose oculta.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
@@ -527,11 +607,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    <span class="info-content">Exames de imagem, como tomografia e ressonância magnética, são cruciais para localizar cistos no cérebro[cite: 4]. Testes sorológicos como o ELISA e o Western blot também são utilizados para detectar a presença de anticorpos.</span>
+                    [cite_start]<span class="info-content">Exames de imagem, como tomografia e ressonância magnética, são cruciais para localizar cistos no cérebro[cite: 4]. Testes sorológicos como o ELISA e o Western blot também são utilizados para detectar a presença de anticorpos.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
-                    <span class="info-content">Albendazol ou Praziquantel, em alguns casos com corticoides.</span>
+                    <span class="info-content">Albendazol ou Praziquantel, em alguns casos com corticoides. Não usar Niclosamida.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Profilaxia:</span>
