--- a/tabela.html
+++ b/tabela.html
@@ -457,7 +457,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos[cite: 3]. O método de Kato-Katz é o mais indicado para diagnóstico e quantificação. Imunodiagnóstico (como ELISA) e exames de imagem (ultrassom do fígado e baço) são usados para avaliar a fase crônica da doença.</span>
+                    <span class="info-content">Exame Parasitológico de Fezes (EPF) para ovos. O método de Kato-Katz é o mais indicado para diagnóstico e quantificação. Imunodiagnóstico (como ELISA) e exames de imagem (ultrassom do fígado e baço) são usados para avaliar a fase crônica da doença.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
@@ -557,7 +557,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Diagnóstico:</span>
-                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes[cite: 4]. Ovos de T. solium e T. saginata são indistinguíveis.</span>
+                    [cite_start]<span class="info-content">Exame Parasitológico de Fezes (EPF) para encontrar ovos ou proglotes. Ovos de T. solium e T. saginata são indistinguíveis.</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Tratamento:</span>
